--- a/src/main/resources/templates/web/auth/forget-password.html
+++ b/src/main/resources/templates/web/auth/forget-password.html
@@ -19,7 +19,7 @@
                             <a href="/">Trang chủ</a>
                         </li>
                         <li class="breadcrumb-item active" aria-current="page">
-                            Đăng nhập
+                            Quên mật khẩu
                         </li>
                     </ol>
                 </nav>
@@ -27,55 +27,49 @@
 
             <div class="card-access">
                 <div class="card-access-header">
-                    <h3>Đăng nhập</h3>
+                    <h3>Quên mật khẩu</h3>
                 </div>
                 <div class="card-access-content">
-                    <form id="form-login" class="form-access">
+                    <form id="form-forget-password" class="form-access">
+                        <p style="font-size: 15px">Vui lòng nhập email liên kết với tài khoản của bạn để đặt lại mật khẩu</p>
+
                         <div class="mb-4 form-group">
                             <label for="email" class="form-label">Email</label>
                             <input type="text" class="form-control" id="email" name="email"/>
                         </div>
-                        <div class="mb-4 form-group">
-                            <label for="password" class="form-label">Mật khẩu</label>
-                            <input type="password" class="form-control" id="password" name="password"/>
-                        </div>
                         <div class="mb-4">
-                            <button type="submit" class="btn btn-access-submit" id="btn-login">
-                                Đăng nhập
+                            <button type="submit" class="btn btn-access-submit" id="btn-forget-password">
+                                Gửi yêu cầu
                             </button>
                         </div>
-                        <div>
-                            <a href="/quen-mat-khau">Bạn quên mật khẩu?</a>
-                            <a class="float-end" href="/dang-ky">Tạo tài khoản mới</a>
-                        </div>
                     </form>
-                </div>
+                    <div id="form-auth-feedback" class="card-access-content form-access" style="min-height: 150px; text-align: center; display: none">
+                        <p style="font-size: 16px; margin-bottom: 70px">Đã gửi yêu cầu đặt lại mật khẩu qua email, vui lòng kiểm tra email của bạn!</p>
 
+                        <div class="status-icon">
+                            <i style="font-size: 80px" class="fas fa-check-circle fa-lg text-success"></i>
+                        </div>
+                    </div>
+                </div>
             </div>
+
         </div>
     </main>
 </th:block>
 
 <th:block id="js">
-
     <script>
-        $('#form-login').validate({
+        $('#form-forget-password').validate({
             rules: {
                 email: {
                     required: true,
                     email: true,
-                },
-                password: {
-                    required: true,
                 }
             },
             messages: {
                 email: {
                     required: "Email không được để trống",
                     email: "Email không đúng định dạng"
-                },
-                password: {
-                    required: "Mật khẩu không được để trống",
                 }
             },
             errorElement: 'span',
@@ -92,38 +86,38 @@
         });
 
         // Xử lý logic
-        const formLoginEl = document.getElementById("form-login");
+        const formForgetPasswordEl = document.getElementById("form-forget-password");
         const emailEl = document.getElementById("email")
-        const passwordEl = document.getElementById("password")
-        const submitButton = document.getElementById("btn-login");
+        const submitButton = document.getElementById("btn-forget-password");
+        const formFeedback = document.getElementById("form-auth-feedback");
 
-        formLoginEl.addEventListener("submit", async (e) => {
+        formForgetPasswordEl.addEventListener("submit", async (e) => {
             e.preventDefault();
 
             // Kiểm tra form đã validate chưa
-            if (!$('#form-login').valid()) {
+            if (!$('#form-forget-password').valid()) {
                 return;
             }
 
             const data = {
-                email: emailEl.value,
-                password: passwordEl.value
+                email: emailEl.value
             }
 
             try {
                 submitButton.disabled = true;
                 submitButton.innerHTML = '<span id="btn-loading" class="spinner-border text-primary" role="status" aria-hidden="true"></span>';
-                let res = await axios.post("/api/auth/login", data)
-                toastr.success("Đăng nhập thành công")
-                setTimeout(() => {
-                    window.location.href = "/";
-                }, 1000)
+
+                let res = await axios.put("/api/auth/forgetPassword", data)
+                toastr.success("Đã gửi yêu cầu qua email, vui lòng kiểm tra email")
+
+                formForgetPasswordEl.style.display = 'none';
+                formFeedback.style.display = 'block';
             } catch (error) {
                 console.log(error)
                 toastr.error(error.response.data.error)
 
                 submitButton.disabled = false;
-                submitButton.innerHTML = 'Đăng nhập';
+                submitButton.innerHTML = 'Gửi yêu cầu';
             }
         })
     </script>
