VNPay payment config, update func deposit

--- a/src/main/resources/templates/user/pages/index.html
+++ b/src/main/resources/templates/user/pages/index.html
@@ -44,7 +44,7 @@
                         Quản lý tin đăng
                         <i class="fas fa-angle-right nav-icon float-right mt-1"></i>
                     </a>
-                    <a href="#" class="list-group-item list-group-item-action">
+                    <a href="/quan-ly/nap-tien" class="list-group-item list-group-item-action">
                         <i class="mr-2 fas fa-dollar-sign nav-icon"></i>
                         Nạp tiền vào tài khoản
                         <i class="fas fa-angle-right nav-icon float-right mt-1"></i>
