--- a/src/main/resources/templates/user/pages/user-infor.html
+++ b/src/main/resources/templates/user/pages/user-infor.html
@@ -39,7 +39,7 @@
 
         <!-- Main content -->
         <section class="content">
-            <div class="container-fluid">
+            <div class="container-fluid pb-5">
                 <form id="form-profile">
                     <div class="form-group row mt-4">
                         <label for="user_id" class="col-md-2 offset-md-2 col-form-label">Mã thành viên</label>
