--- a/src/main/resources/templates/user/fragments/sidebar.html
+++ b/src/main/resources/templates/user/fragments/sidebar.html
@@ -31,7 +31,7 @@
             </div>
             <ul class="mb-2 list-unstyled" style="padding-left: 13px">
                 <li><span>Mã thành viên:</span> <span style="font-weight: 700;" th:text="${#authentication.principal.user.id}"> 141535</span></li>
-                <li><span>TK Chính:</span> <span style="font-weight: 700;" th:text="${#authentication.principal.user.accountBalance}"> 0</span></li>
+                <li><span>TK Chính:</span> <span style="font-weight: 700;" th:text="${@moneyUtils.formatCurrency(#authentication.principal.user.accountBalance)}"> 0</span></li>
             </ul>
             <div class="d-flex" style="padding-left: 13px">
                 <a class="btn btn-sm btn-warning mr-2" href="#" role="button">Nạp tiền</a>
